@startuml LogAnalyzer_ClassDiagram

package LogAnalyzer {
    
    enum LogLevel {
        UNKNOWN
        ERROR
        WARNING
        INFO
        DEBUG
    }
    
    class LogEntry {
        +originalLine : string
        +level : LogLevel
        +timestamp : string
        +message : string
        +LogEntry()
    }
    
    class LogFileReader {
        -filePath_ : string
        -fileStream_ : ifstream
        -isValid_ : bool
        +LogFileReader(filePath : string)
        +isValid() : bool
        +readAllLines() : vector
        +readNextLine() : optional
        +getFileSize() : uintmax_t
        +getFilePath() : string
        -validateFile() : void
    }
    
    class LogParser {
        -levelMap_ : unordered_map
        -timestampRegex_ : regex
        +LogParser()
        +parseLine(line : string) : LogEntry
        +parseLines(lines : vector) : vector
        +filterByKeyword(entries, keyword) : vector
        +filterByLevel(entries, level) : vector
        +{static} logLevelToString(level) : string
        +{static} stringToLogLevel(levelStr) : LogLevel
        -initializeLevelMap() : void
        -detectLogLevel(line : string) : LogLevel
        -extractTimestamp(line : string) : string
        -extractMessage(line : string) : string
    }
    
    class Statistics {
        +totalLines : size_t
        +levelCounts : unordered_map
        +analysisTime : time_point
        +filePath : string
        +fileSize : uintmax_t
        +Statistics()
    }
    
    class LogStats {
        +LogStats()
        +calculateStats() : Statistics
        +printStats(stats : Statistics) : void
        +printDetailedStats(stats : Statistics) : void
        +statsToJson(stats : Statistics) : string
        +printEntriesByLevel() : void
        +printKeywordMatches() : void
        -formatTimestamp() : string
        -formatFileSize() : string
        -calculatePercentage() : double
    }
}

LogEntry --> LogLevel
LogParser --> LogEntry
LogParser --> LogLevel
LogStats --> LogEntry
LogStats --> Statistics
Statistics --> LogLevel

@enduml 